# smart_lock

./: sdkconfig  sdkconfig.old
CycleSmartAPP/: local.properties  settings.gradle.kts
CycleSmartAPP/app/: build.gradle.kts
CycleSmartAPP/app/src/androidTest/java/com/example/cyclesmart/: ExampleInstrumentedTest.kt
CycleSmartAPP/app/src/main/: AndroidManifest.xml
CycleSmartAPP/app/src/main/java/com/example/cyclesmart/: MainActivity.kt
CycleSmartAPP/app/src/main/java/com/example/cyclesmart/ui/theme/: Color.kt  Theme.kt  Type.kt
CycleSmartAPP/app/src/main/res/drawable/: shape_circle.xml  shape_circle_gray.xml
CycleSmartAPP/app/src/main/res/layout/: activity_main.xml  drop_item.xml
CycleSmartAPP/app/src/main/res/values/: strings.xml  themes.xml
CycleSmartAPP/app/src/test/java/com/example/cyclesmart/: ExampleUnitTest.kt
CycleSmartAPP/gradle/wrapper/: gradle-wrapper.properties
CycleSmartDev/: .gitignore  sdkconfig  sdkconfig.old
CycleSmartDev/main/: CMakeLists.txt  smart-lock.c
CycleSmartDev/main/beep/: beep.c  beep.h
CycleSmartDev/main/ble/: ble_ctl.c  ble_ctl.h
CycleSmartDev/main/key/: key.c  key.h
CycleSmartDev/main/rc522/: rc522.c
main/: CMakeLists.txt  smart-lock.c
main/ble/: ble_ctl.c  ble_ctl.h
main/key/: key.c  key.h
main/rc522/: mfrc522.h  rc522.c  rc522.h
